--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -6,7 +6,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  margin: 0;margin-top: 7px;
+  margin: 0;
+  margin-top: 7px;
 }
 
 @media screen and (max-width: 740px) {
