--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,7 +1,6 @@
 .profile__info {
   margin-left: 30px;
   max-width: 336px;
-  min-height: 73px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -11,7 +10,8 @@
 
 @media screen and (max-width: 740px) {
   .profile__info {
-    margin: 26px auto 36px;
+    margin: 26px auto 34px;
     justify-content: center;
+    max-width: 300px;
   }
 }
