--- a/blocks/profile/__photo/profile__photo.css
+++ b/blocks/profile/__photo/profile__photo.css
@@ -1,11 +1,7 @@
 .profile__photo {
-  border-radius: 50%;
-  max-height: 120px;
-  max-width: 120px;
-}
-
-@media screen and (max-width: 740px) {
-  .profile__photo {
-    margin: 0 auto;
-  }
+  min-width: 100%;
+  max-width: -webkit-fill-available;
+  min-height: 100%;
+  max-height: -webkit-fill-available;
+  object-fit: cover;
 }
