--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,17 +1,13 @@
 .profile__info {
   margin-left: 30px;
-  max-width: 336px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  align-content: center;
 }
 
 @media screen and (max-width: 740px) {
   .profile__info {
+    display: flex;
+    flex-direction: column;
     margin: 26px auto 34px;
-    justify-content: center;
+    align-items: center;
     max-width: 300px;
   }
 }
