--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -24,6 +24,8 @@
 @import url(../blocks/element/__group/element__group.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like-group/element__like-group.css);
+@import url(../blocks/element/__like-count/element__likes-count.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/element/__delete/element__delete.css);
 
@@ -37,6 +39,7 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
+@import url(../blocks/popup/__submit/_small/popup__submit_small.css);
 @import url(../blocks/popup/__close/popup__close.css);
 
 @import url(../blocks/popup/_photo/popup_photo.css);
